Remove redundant code.